@@ -43,6 +43,7 @@ Other features
  * Add new `wagtail_icon` template tag to facilitate making admin icons accessible (Sander Tuit)
  * Set `ALLOWED_HOSTS` in the project template to allow any host in development (Tom Dyson)
  * Expose reusable client-side code to build Draftail extensions (Thibaud Colas)
+ * Added ``WAGTAILFRONTENDCACHE_LANGUAGES`` setting to specify the languages whose URLs are to be purged when using ``i18n_patterns`` (PyMan Claudio Marinozzi)
 
 Bug fixes
 ~~~~~~~~~
